--- a/test-output/old/Page Object test example/classes.html
+++ b/test-output/old/Page Object test example/classes.html
@@ -4,6 +4,40 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
+<td>com.pp.tests.EnrollPageTest</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>VerifyEnrollmentToken</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyEnrollPageElements</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>setup</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>tearDown</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td>com.pp.tests.LoginPageTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
@@ -11,7 +45,15 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>clickOnNeedHelpWithyourUsernamePassLink</td>
+<td>clickOnLoginWithInvalidUsernameAndPassword</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>clickOnLoginWithvalidUsernameAndInvalidPasswordAndVerifyWarningMessage</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>clickOnLoginWithValidCredentials</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -19,11 +61,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>clickOnLoginWithInvalidUsernameAndPassword</td>
+<td>verifyIamNewHereTestCase</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyIamNewHereTestCase</td>
+<td>clickOnNeedHelpWithyourUsernamePassLink</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
