--- a/test-output/old/Page Object test example/methods-alphabetical.html
+++ b/test-output/old/Page Object test example/methods-alphabetical.html
@@ -1,16 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Page Object test example</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f6d9ca">  <td>15/10/12 23:01:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.clickOnLoginWithInvalidUsernameAndPassword()[pri:0, instance:com.pp.tests.LoginPageTest@1e352bf]">clickOnLoginWithInvalidUsernameAndPassword</td> 
-  <td>main@24185877</td>   <td></td> </tr>
-<tr bgcolor="f6d9ca">  <td>15/10/12 23:01:54</td>   <td>11763</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.clickOnNeedHelpWithyourUsernamePassLink()[pri:0, instance:com.pp.tests.LoginPageTest@1e352bf]">clickOnNeedHelpWithyourUsernamePassLink</td> 
-  <td>main@24185877</td>   <td></td> </tr>
-<tr bgcolor="d3e89f">  <td>15/10/12 23:01:18</td>   <td>-24441</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestObject.setup()[pri:0, instance:com.pp.tests.LoginPageTest@1e352bf]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@24185877</td>   <td></td> </tr>
-<tr bgcolor="d3e89f">  <td>15/10/12 23:02:07</td>   <td>24339</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestObject.tearDown()[pri:0, instance:com.pp.tests.LoginPageTest@1e352bf]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@24185877</td>   <td></td> </tr>
-<tr bgcolor="f6d9ca">  <td>15/10/12 23:01:42</td>   <td>-66</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyAllReadyMembersElements()[pri:0, instance:com.pp.tests.LoginPageTest@1e352bf]">verifyAllReadyMembersElements</td> 
-  <td>main@24185877</td>   <td></td> </tr>
-<tr bgcolor="f6d9ca">  <td>15/10/12 23:01:36</td>   <td>-6925</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyIamNewHereTestCase()[pri:0, instance:com.pp.tests.LoginPageTest@1e352bf]">verifyIamNewHereTestCase</td> 
-  <td>main@24185877</td>   <td></td> </tr>
+<tr bgcolor="a18c8f">  <td>15/12/14 17:11:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EnrollPageTest.VerifyEnrollmentToken()[pri:0, instance:com.pp.tests.EnrollPageTest@180bc464]">VerifyEnrollmentToken</td> 
+  <td>main@1007251739</td>   <td></td> </tr>
+<tr bgcolor="cbc48f">  <td>15/12/14 17:09:37</td>   <td>-100927</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.clickOnLoginWithInvalidUsernameAndPassword()[pri:0, instance:com.pp.tests.LoginPageTest@3fb6a447]">clickOnLoginWithInvalidUsernameAndPassword</td> 
+  <td>main@1007251739</td>   <td></td> </tr>
+<tr bgcolor="cbc48f">  <td>15/12/14 17:10:41</td>   <td>-37246</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.clickOnLoginWithValidCredentials()[pri:0, instance:com.pp.tests.LoginPageTest@3fb6a447]">clickOnLoginWithValidCredentials</td> 
+  <td>main@1007251739</td>   <td></td> </tr>
+<tr bgcolor="cbc48f">  <td>15/12/14 17:09:53</td>   <td>-84636</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.clickOnLoginWithvalidUsernameAndInvalidPasswordAndVerifyWarningMessage()[pri:0, instance:com.pp.tests.LoginPageTest@3fb6a447]">clickOnLoginWithvalidUsernameAndInvalidPasswordAndVerifyWarningMessage</td> 
+  <td>main@1007251739</td>   <td></td> </tr>
+<tr bgcolor="cbc48f">  <td>15/12/14 17:09:49</td>   <td>-89004</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.clickOnNeedHelpWithyourUsernamePassLink()[pri:0, instance:com.pp.tests.LoginPageTest@3fb6a447]">clickOnNeedHelpWithyourUsernamePassLink</td> 
+  <td>main@1007251739</td>   <td></td> </tr>
+<tr bgcolor="a58fbd">  <td>15/12/14 17:09:06</td>   <td>-131731</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestObject.setup()[pri:0, instance:com.pp.tests.LoginPageTest@3fb6a447]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1007251739</td>   <td></td> </tr>
+<tr bgcolor="a58fbd">  <td>15/12/14 17:10:53</td>   <td>-24994</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestObject.setup()[pri:0, instance:com.pp.tests.EnrollPageTest@180bc464]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1007251739</td>   <td></td> </tr>
+<tr bgcolor="a58fbd">  <td>15/12/14 17:10:53</td>   <td>-25415</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestObject.tearDown()[pri:0, instance:com.pp.tests.LoginPageTest@3fb6a447]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1007251739</td>   <td></td> </tr>
+<tr bgcolor="a58fbd">  <td>15/12/14 17:11:33</td>   <td>14676</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestObject.tearDown()[pri:0, instance:com.pp.tests.EnrollPageTest@180bc464]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1007251739</td>   <td></td> </tr>
+<tr bgcolor="cbc48f">  <td>15/12/14 17:09:37</td>   <td>-100982</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyAllReadyMembersElements()[pri:0, instance:com.pp.tests.LoginPageTest@3fb6a447]">verifyAllReadyMembersElements</td> 
+  <td>main@1007251739</td>   <td></td> </tr>
+<tr bgcolor="a18c8f">  <td>15/12/14 17:11:23</td>   <td>4614</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EnrollPageTest.verifyEnrollPageElements()[pri:0, instance:com.pp.tests.EnrollPageTest@180bc464]">verifyEnrollPageElements</td> 
+  <td>main@1007251739</td>   <td></td> </tr>
+<tr bgcolor="cbc48f">  <td>15/12/14 17:09:32</td>   <td>-105817</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyIamNewHereTestCase()[pri:0, instance:com.pp.tests.LoginPageTest@3fb6a447]">verifyIamNewHereTestCase</td> 
+  <td>main@1007251739</td>   <td></td> </tr>
 </table>
