Added 2 Clases and Added Couple of Methods.

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\manjunathr\AppData\Local\Temp\testng-eclipse-1729605967\testng-customsuite.xml</span>
+                    <span>C:\Users\manjunathr\AppData\Local\Temp\testng-eclipse-1786915588\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -90,7 +90,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods,   5 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -101,27 +101,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.pp.tests.LoginPageTest" hash-for-method="clickOnLoginWithInvalidUsernameAndPassword">clickOnLoginWithInvalidUsernameAndPassword</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.pp.tests.LoginPageTest" hash-for-method="verifyMailMenuOptions">verifyMailMenuOptions</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.pp.tests.LoginPageTest" hash-for-method="clickOnLoginWithValidCredentials">clickOnLoginWithValidCredentials</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.pp.tests.LoginPageTest" hash-for-method="clickOnNeedHelpWithyourUsernamePassLink">clickOnNeedHelpWithyourUsernamePassLink</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.pp.tests.LoginPageTest" hash-for-method="verifyAllReadyMembersElements">verifyAllReadyMembersElements</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.pp.tests.LoginPageTest" hash-for-method="verifyIamNewHereTestCase">verifyIamNewHereTestCase</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.pp.tests.LoginPageTest" hash-for-method="verifyMailMenuSentItems">verifyMailMenuSentItems</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -144,37 +129,16 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="clickOnLoginWithInvalidUsernameAndPassword">
-                  </a> <!-- clickOnLoginWithInvalidUsernameAndPassword -->
-                  <span class="method-name">clickOnLoginWithInvalidUsernameAndPassword</span>
+                  <a name="verifyMailMenuOptions">
+                  </a> <!-- verifyMailMenuOptions -->
+                  <span class="method-name">verifyMailMenuOptions</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="clickOnLoginWithValidCredentials">
-                  </a> <!-- clickOnLoginWithValidCredentials -->
-                  <span class="method-name">clickOnLoginWithValidCredentials</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="clickOnNeedHelpWithyourUsernamePassLink">
-                  </a> <!-- clickOnNeedHelpWithyourUsernamePassLink -->
-                  <span class="method-name">clickOnNeedHelpWithyourUsernamePassLink</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyAllReadyMembersElements">
-                  </a> <!-- verifyAllReadyMembersElements -->
-                  <span class="method-name">verifyAllReadyMembersElements</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyIamNewHereTestCase">
-                  </a> <!-- verifyIamNewHereTestCase -->
-                  <span class="method-name">verifyIamNewHereTestCase</span>
+                  <a name="verifyMailMenuSentItems">
+                  </a> <!-- verifyMailMenuSentItems -->
+                  <span class="method-name">verifyMailMenuSentItems</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -182,7 +146,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\manjunathr\AppData\Local\Temp\testng-eclipse-1729605967\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\manjunathr\AppData\Local\Temp\testng-eclipse-1786915588\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -231,32 +195,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(5);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'clickOnLoginWithValidCredentials')
+data.setCell(0, 1, 'verifyMailMenuOptions')
 data.setCell(0, 2, 'com.pp.tests.LoginPageTest')
-data.setCell(0, 3, 17309);
+data.setCell(0, 3, 24832);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'clickOnLoginWithInvalidUsernameAndPassword')
+data.setCell(1, 1, 'verifyMailMenuSentItems')
 data.setCell(1, 2, 'com.pp.tests.LoginPageTest')
-data.setCell(1, 3, 12402);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'verifyIamNewHereTestCase')
-data.setCell(2, 2, 'com.pp.tests.LoginPageTest')
-data.setCell(2, 3, 5755);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'clickOnNeedHelpWithyourUsernamePassLink')
-data.setCell(3, 2, 'com.pp.tests.LoginPageTest')
-data.setCell(3, 3, 5274);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'verifyAllReadyMembersElements')
-data.setCell(4, 2, 'com.pp.tests.LoginPageTest')
-data.setCell(4, 3, 47);
+data.setCell(1, 3, 23467);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 40 seconds</span>
+              <span class="suite-total-time">Total running time: 48 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -271,13 +223,23 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">1 ignored method</span>
+            <span class="header-content">6 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
               <span class="ignored-class-name">com.pp.tests.LoginPageTest</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">clickOnLoginWithvalidUsernameAndInvalidPasswordAndVerifyWarningMessage</span>
+                <span class="ignored-method-name">clickOnNeedHelpWithyourUsernamePassLink</span>
+                <br/>
+                <span class="ignored-method-name">verifyIamNewHereTestCase</span>
+                <br/>
+                <span class="ignored-method-name">verifyAllReadyMembersElements</span>
+                <br/>
+                <span class="ignored-method-name">clickOnLoginWithValidCredentials</span>
+                <br/>
+                <span class="ignored-method-name">LoginAndClickonComposeMessage</span>
+                <br/>
+                <span class="ignored-method-name">clickOnLoginWithInvalidUsernameAndPassword</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -295,28 +257,16 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">verifyIamNewHereTestCase</span>
-                <span class="method-start">18851 ms</span>
+                <span class="method-name">verifyMailMenuOptions</span>
+                <span class="method-start">14980 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">verifyAllReadyMembersElements</span>
-                <span class="method-start">24607 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">clickOnLoginWithInvalidUsernameAndPassword</span>
-                <span class="method-start">24655 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">clickOnNeedHelpWithyourUsernamePassLink</span>
-                <span class="method-start">37058 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">clickOnLoginWithValidCredentials</span>
-                <span class="method-start">42332 ms</span>
+                <span class="method-name">verifyMailMenuSentItems</span>
+                <span class="method-start">39813 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">59641 ms</span>
+                <span class="method-start">63281 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
