Done changed in Files

--- a/test-output/old/Page Object test example/classes.html
+++ b/test-output/old/Page Object test example/classes.html
@@ -4,18 +4,56 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.pp.tests.EnrollPageTest</td>
+<td>com.pp.tests.AccountSummaryTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>VerifyEnrollmentToken</td>
+<td>verifyMailMenuComposeMessage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyEnrollPageElements</td>
+<td>verifyMailMenuOptions</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>CheckwithViewProfile</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyMailMenuSentItems</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>setup</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>tearDown</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>com.pp.tests.ComposeMessageTest</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>LoginAndClickonComposeMessage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -46,10 +84,6 @@
 <tr>
 <td>&nbsp;</td>
 <td>clickOnLoginWithInvalidUsernameAndPassword</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>clickOnLoginWithvalidUsernameAndInvalidPasswordAndVerifyWarningMessage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
