--- a/test-output/old/Page Object test example/methods-alphabetical.html
+++ b/test-output/old/Page Object test example/methods-alphabetical.html
@@ -1,28 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Page Object test example</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a18c8f">  <td>15/12/14 17:11:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EnrollPageTest.VerifyEnrollmentToken()[pri:0, instance:com.pp.tests.EnrollPageTest@180bc464]">VerifyEnrollmentToken</td> 
-  <td>main@1007251739</td>   <td></td> </tr>
-<tr bgcolor="cbc48f">  <td>15/12/14 17:09:37</td>   <td>-100927</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.clickOnLoginWithInvalidUsernameAndPassword()[pri:0, instance:com.pp.tests.LoginPageTest@3fb6a447]">clickOnLoginWithInvalidUsernameAndPassword</td> 
-  <td>main@1007251739</td>   <td></td> </tr>
-<tr bgcolor="cbc48f">  <td>15/12/14 17:10:41</td>   <td>-37246</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.clickOnLoginWithValidCredentials()[pri:0, instance:com.pp.tests.LoginPageTest@3fb6a447]">clickOnLoginWithValidCredentials</td> 
-  <td>main@1007251739</td>   <td></td> </tr>
-<tr bgcolor="cbc48f">  <td>15/12/14 17:09:53</td>   <td>-84636</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.clickOnLoginWithvalidUsernameAndInvalidPasswordAndVerifyWarningMessage()[pri:0, instance:com.pp.tests.LoginPageTest@3fb6a447]">clickOnLoginWithvalidUsernameAndInvalidPasswordAndVerifyWarningMessage</td> 
-  <td>main@1007251739</td>   <td></td> </tr>
-<tr bgcolor="cbc48f">  <td>15/12/14 17:09:49</td>   <td>-89004</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.clickOnNeedHelpWithyourUsernamePassLink()[pri:0, instance:com.pp.tests.LoginPageTest@3fb6a447]">clickOnNeedHelpWithyourUsernamePassLink</td> 
-  <td>main@1007251739</td>   <td></td> </tr>
-<tr bgcolor="a58fbd">  <td>15/12/14 17:09:06</td>   <td>-131731</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestObject.setup()[pri:0, instance:com.pp.tests.LoginPageTest@3fb6a447]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1007251739</td>   <td></td> </tr>
-<tr bgcolor="a58fbd">  <td>15/12/14 17:10:53</td>   <td>-24994</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestObject.setup()[pri:0, instance:com.pp.tests.EnrollPageTest@180bc464]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1007251739</td>   <td></td> </tr>
-<tr bgcolor="a58fbd">  <td>15/12/14 17:10:53</td>   <td>-25415</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestObject.tearDown()[pri:0, instance:com.pp.tests.LoginPageTest@3fb6a447]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1007251739</td>   <td></td> </tr>
-<tr bgcolor="a58fbd">  <td>15/12/14 17:11:33</td>   <td>14676</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestObject.tearDown()[pri:0, instance:com.pp.tests.EnrollPageTest@180bc464]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1007251739</td>   <td></td> </tr>
-<tr bgcolor="cbc48f">  <td>15/12/14 17:09:37</td>   <td>-100982</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyAllReadyMembersElements()[pri:0, instance:com.pp.tests.LoginPageTest@3fb6a447]">verifyAllReadyMembersElements</td> 
-  <td>main@1007251739</td>   <td></td> </tr>
-<tr bgcolor="a18c8f">  <td>15/12/14 17:11:23</td>   <td>4614</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EnrollPageTest.verifyEnrollPageElements()[pri:0, instance:com.pp.tests.EnrollPageTest@180bc464]">verifyEnrollPageElements</td> 
-  <td>main@1007251739</td>   <td></td> </tr>
-<tr bgcolor="cbc48f">  <td>15/12/14 17:09:32</td>   <td>-105817</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyIamNewHereTestCase()[pri:0, instance:com.pp.tests.LoginPageTest@3fb6a447]">verifyIamNewHereTestCase</td> 
-  <td>main@1007251739</td>   <td></td> </tr>
+<tr bgcolor="bf8bb7">  <td>16/01/21 07:09:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountSummaryTest.CheckwithViewProfile()[pri:0, instance:com.pp.tests.AccountSummaryTest@7a5d012c]">CheckwithViewProfile</td> 
+  <td>main@159259014</td>   <td></td> </tr>
+<tr bgcolor="63be87">  <td>16/01/21 07:10:01</td>   <td>23240</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ComposeMessageTest.LoginAndClickonComposeMessage()[pri:0, instance:com.pp.tests.ComposeMessageTest@7f690630]">LoginAndClickonComposeMessage</td> 
+  <td>main@159259014</td>   <td></td> </tr>
+<tr bgcolor="9b6d63">  <td>16/01/21 07:07:46</td>   <td>-111280</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.clickOnLoginWithInvalidUsernameAndPassword()[pri:0, instance:com.pp.tests.LoginPageTest@3cda1055]">clickOnLoginWithInvalidUsernameAndPassword</td> 
+  <td>main@159259014</td>   <td></td> </tr>
+<tr bgcolor="9b6d63">  <td>16/01/21 07:07:59</td>   <td>-98058</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.clickOnLoginWithValidCredentials()[pri:0, instance:com.pp.tests.LoginPageTest@3cda1055]">clickOnLoginWithValidCredentials</td> 
+  <td>main@159259014</td>   <td></td> </tr>
+<tr bgcolor="9b6d63">  <td>16/01/21 07:07:56</td>   <td>-101364</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.clickOnNeedHelpWithyourUsernamePassLink()[pri:0, instance:com.pp.tests.LoginPageTest@3cda1055]">clickOnNeedHelpWithyourUsernamePassLink</td> 
+  <td>main@159259014</td>   <td></td> </tr>
+<tr bgcolor="a16788">  <td>16/01/21 07:07:33</td>   <td>-124032</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestObject.setup()[pri:0, instance:com.pp.tests.LoginPageTest@3cda1055]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@159259014</td>   <td></td> </tr>
+<tr bgcolor="a16788">  <td>16/01/21 07:08:13</td>   <td>-84098</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestObject.setup()[pri:0, instance:com.pp.tests.AccountSummaryTest@7a5d012c]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@159259014</td>   <td></td> </tr>
+<tr bgcolor="a16788">  <td>16/01/21 07:09:53</td>   <td>15372</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestObject.setup()[pri:0, instance:com.pp.tests.ComposeMessageTest@7f690630]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@159259014</td>   <td></td> </tr>
+<tr bgcolor="a16788">  <td>16/01/21 07:08:13</td>   <td>-84443</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestObject.tearDown()[pri:0, instance:com.pp.tests.LoginPageTest@3cda1055]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@159259014</td>   <td></td> </tr>
+<tr bgcolor="a16788">  <td>16/01/21 07:09:52</td>   <td>15056</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestObject.tearDown()[pri:0, instance:com.pp.tests.AccountSummaryTest@7a5d012c]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@159259014</td>   <td></td> </tr>
+<tr bgcolor="a16788">  <td>16/01/21 07:10:25</td>   <td>47648</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestObject.tearDown()[pri:0, instance:com.pp.tests.ComposeMessageTest@7f690630]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@159259014</td>   <td></td> </tr>
+<tr bgcolor="9b6d63">  <td>16/01/21 07:07:46</td>   <td>-111329</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyAllReadyMembersElements()[pri:0, instance:com.pp.tests.LoginPageTest@3cda1055]">verifyAllReadyMembersElements</td> 
+  <td>main@159259014</td>   <td></td> </tr>
+<tr bgcolor="9b6d63">  <td>16/01/21 07:07:42</td>   <td>-115067</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyIamNewHereTestCase()[pri:0, instance:com.pp.tests.LoginPageTest@3cda1055]">verifyIamNewHereTestCase</td> 
+  <td>main@159259014</td>   <td></td> </tr>
+<tr bgcolor="bf8bb7">  <td>16/01/21 07:09:09</td>   <td>-28854</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountSummaryTest.verifyMailMenuComposeMessage()[pri:0, instance:com.pp.tests.AccountSummaryTest@7a5d012c]">verifyMailMenuComposeMessage</td> 
+  <td>main@159259014</td>   <td></td> </tr>
+<tr bgcolor="bf8bb7">  <td>16/01/21 07:08:42</td>   <td>-55259</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountSummaryTest.verifyMailMenuOptions()[pri:0, instance:com.pp.tests.AccountSummaryTest@7a5d012c]">verifyMailMenuOptions</td> 
+  <td>main@159259014</td>   <td></td> </tr>
 </table>
